[FIXED Issue #3] Desktop switch button alignment
Menu start, tasks, tray and desktop switch CSS alignment was fixed.

--- a/web/_phpos/themes/default/phposAPI.css
+++ b/web/_phpos/themes/default/phposAPI.css
@@ -263,7 +263,7 @@ select {
 
 /* ====== MENU START ====== */	
 #phpos-menustart_Tasks_container{
-	width:70%; 
+	width:60%; 
 	float:left;
 	vertical-align:top
 }
@@ -300,16 +300,21 @@ select {
 }
 #phpos-menustart_Tray_container {
 	width:auto;
-	min-width:250px;
+	min-width:250px auto;
 	float:left;
-	vertical-align:top
+	position:relative;
+	vertical-align:top;
+	margin: 0 auto 0;
 }
 #phpos-menustart_Switch_container {
 	width:auto;
-	min-width:70px;
+	height:auto;
+	min-width:100px;
 	padding-top:10px;
 	float:right;
-	vertical-align:top
+	position:relative;
+	vertical-align:top;
+	margin: 0 auto 0;
 }
 #phpos-menustart_Tasks {
 	margin: 0 auto 0;
@@ -319,7 +324,8 @@ select {
 	bottom:0px;
 	left:0px;
 	background:none;
-	position:relative
+	position:relative;
+	vertical-align:top
 }
 #phpos-menustart_Window_container {
 	clear:both;		
